unpackaged/main/default/objects/Activity/fields/Review_Service_Info__c.field-meta.xml
<CustomField>
    <fullName>Review_Service_Info__c</fullName>
    <description>Did the agent provide suitable information about the service and our capability? - 4 points for Yes</description>
    <inlineHelpText>Did the agent provide suitable information about the service and our capability? - 4 points for Yes</inlineHelpText>
    <label>Review - Service Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>