unpackaged/main/default/objects/Activity/fields/Review_Thanks_for_call__c.field-meta.xml
<CustomField>
    <fullName>Review_Thanks_for_call__c</fullName>
    <description>Did the agent thank the customer for their call? - 2 points for Yes</description>
    <inlineHelpText>Did the agent thank the customer for their call? - 2 points for Yes</inlineHelpText>
    <label>Review - Thanks for call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>