unpackaged/main/default/objects/Activity/fields/Review_Tone_of_voice__c.field-meta.xml
<CustomField>
    <fullName>Review_Tone_of_voice__c</fullName>
    <description>Did the agent use the correct tone of voice througout the whole call? - 3 points for Yes</description>
    <inlineHelpText>Did the agent use the correct tone of voice througout the whole call? - 3 points for Yes</inlineHelpText>
    <label>Review - Tone of voice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>