unpackaged/main/default/objects/Activity/fields/Review_Use_of_customer_name__c.field-meta.xml
<CustomField>
    <fullName>Review_Use_of_customer_name__c</fullName>
    <description>Did the agent use the customer&#39;s name in the correct way throughout the call? - 2 points for Yes</description>
    <inlineHelpText>Did the agent use the customer&#39;s name in the correct way throughout the call? - 2 points for Yes</inlineHelpText>
    <label>Review - Use of customer name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>