unpackaged/main/default/objects/Activity/fields/Reviewd_by__c.field-meta.xml
<CustomField>
    <fullName>Reviewd_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewd by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cal_Logs_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>