unpackaged/main/default/objects/Activity/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>The Trade for the Work Type.</description>
    <formula>TEXT(Work_Type__r.Trade__c)</formula>
    <inlineHelpText>The Trade for the Work Type.</inlineHelpText>
    <label>Trade</label>
    <type>Text</type>
</CustomField>