unpackaged/main/default/objects/Activity/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer - Booking Opportunity</fullName>
            </value>
            <value>
                <fullName>Existing Client - Booking Opportunity</fullName>
            </value>
            <value>
                <fullName>Out Bound Calls</fullName>
            </value>
            <value>
                <fullName>Job Related</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Other / Sales / Wrong Number</fullName>
            </value>
            <value>
                <fullName>Call Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>