unpackaged/main/default/objects/Activity/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type - Only if booking Opportunity</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Calls</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <type>Lookup</type>
</CustomField>